--- a/res/values/themes1.xml
+++ b/res/values/themes1.xml
@@ -24,18 +24,22 @@
 
     <style name="TextSecure.DarkIntroThemeOled" parent="TextSecure.DarkIntroTheme">
         <item name="android:windowBackground">@color/black</item>
+        <item name="android:statusBarColor">@color/black</item>
     </style>
 
     <style name="TextSecure.LightIntroThemeGreen" parent="TextSecure.LightIntroTheme">
         <item name="android:windowBackground">@color/green_700</item>
         <item name="colorAccent">@color/green_500</item>
         <item name="login_top_background">@color/green_700</item>
+        <item name="android:statusBarColor">@color/green_800</item>
     </style>
 
     <style name="TextSecure.LightIntroThemeBlue" parent="TextSecure.LightIntroTheme">
+        <item name="android:statusBarColor">@color/blue_800</item>
     </style>
 
     <style name="TextSecure.DarkThemeOled" parent="TextSecure.DarkTheme">
+        <item name="actionBarStyle">@style/TextSecure.DarkActionBarOled</item>
         <item name="android:windowBackground">@color/black</item>
         <item name="attachment_type_selector_background">@color/black</item>
         <item name="dialog_background_color">@color/black</item>
