--- a/app/src/main/res/xml/preferences_chats.xml
+++ b/app/src/main/res/xml/preferences_chats.xml
@@ -75,6 +75,31 @@
                 android:dependency="pref_backup_enabled"
                 tools:summary="Last backup: 3 days ago"/>
 
+        <!-- JW: added backup location switch -->
+        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
+                android:defaultValue="false"
+                android:key="pref_backup_location_external"
+                android:title="@string/preferences_chats__chat_backups_removable"
+                android:summary="@string/preferences_chats__backup_chats_to_removable_storage" />
+
+        <!-- JW: added backup type switch -->
+        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
+            android:defaultValue="false"
+            android:key="pref_backup_zipfile"
+            android:title="@string/preferences_chats__chat_backups_zipfile"
+            android:summary="@string/preferences_chats__backup_chats_to_encrypted_zipfile" />
+
+    </PreferenceCategory>
+
+    <!-- JW: added view once messages option -->
+    <PreferenceCategory android:layout="@layout/preference_divider"/>
+
+    <PreferenceCategory android:key="backup_category" android:title="@string/preferences_chats__view_once_messages">
+        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
+            android:defaultValue="false"
+            android:key="pref_keep_view_once_messages"
+            android:title="@string/preferences_chats__chat_keep_view_once_messages"
+            android:summary="@string/preferences_chats__keep_view_once_messages_summary" />
     </PreferenceCategory>
 
 </PreferenceScreen>
