Added encrypted and plaintext backup / restore. Re-added import SMS database. Removed apk expire. Added the choice between passphrase protection and the Android screenlock. Added more conversation colors and themes. Added a choice for the backup location. Added an option to treat view-once media as normal media.

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -6,7 +6,6 @@
 <!-- en --><item>English</item>
 <!-- ar --><item>Arabic العربية</item>
 <!-- az --><item>Azərbaycan</item>
-<!-- jv --><item>Basa Jawa</item>
 <!-- bn --><item>Bengali বাংলা</item>
 <!-- bs --><item>Bosanski</item>
 <!-- bg --><item>Bulgarian български</item>
@@ -26,15 +25,12 @@
 <!-- ga --><item>Gaeilge</item>
 <!-- gl --><item>Galego</item>
 <!-- el --><item>Greek ελληνικά</item>
-<!-- gu --><item>Gujarati ગુજરાતી</item>
-<!-- ha --><item>Hausa</item>
 <!-- he/iw --><item>Hebrew עברית</item>
 <!-- hi --><item>Hindi हिंदी</item>
 <!-- hr --><item>Hrvatski</item>
 <!-- id/in --><item>Indonesia</item>
 <!-- it --><item>Italiano</item>
 <!-- ja --><item>Japanese 日本語</item>
-<!-- kn --><item>Kannada ಕನ್ನಡ</item>
 <!-- km --><item>Khmer ភាសាខ្មែរ</item>
 <!-- sw --><item>Kiswahili</item>
 <!-- ko --><item>Korean 한국어</item>
@@ -77,7 +73,6 @@
       <item>en</item>
       <item>ar</item>
       <item>az</item>
-      <item>jv</item>
       <item>bn</item>
       <item>bs</item>
       <item>bg</item>
@@ -97,15 +92,12 @@
       <item>ga</item>
       <item>gl</item>
       <item>el</item>
-      <item>gu</item>
-      <item>ha</item>
       <item>iw</item>
       <item>hi</item>
       <item>hr</item>
       <item>in</item>
       <item>it</item>
       <item>ja</item>
-      <item>kn</item>
       <item>km</item>
       <item>sw</item>
       <item>ko</item>
@@ -143,14 +135,22 @@
       <item>vi</item>
   </string-array>
 
+  <!-- JW: added themes -->
     <string-array name="pref_theme_entries">
       <item>@string/preferences__light_theme</item>
       <item>@string/preferences__dark_theme</item>
+      <item>@string/preferences__oled_theme</item>
+      <item>@string/preferences__green_theme</item>
+      <item>@string/preferences__blue_theme</item>
   </string-array>
 
+  <!-- JW: added themes -->
   <string-array name="pref_theme_values" translatable="false">
       <item>light</item>
       <item>dark</item>
+      <item>oled</item>
+      <item>green</item>
+      <item>blue</item>
   </string-array>
 
   <string-array name="pref_led_color_entries">
