--- a/app/src/main/res/xml/preferences_chats.xml
+++ b/app/src/main/res/xml/preferences_chats.xml
@@ -82,6 +82,31 @@
                 android:dependency="pref_backup_enabled"
                 android:summary="@string/preferences_chats__test_your_backup_passphrase_and_verify_that_it_matches"/>
 
+        <!-- JW: added backup location switch -->
+        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
+                android:defaultValue="false"
+                android:key="pref_backup_location_external"
+                android:title="@string/preferences_chats__chat_backups_removable"
+                android:summary="@string/preferences_chats__backup_chats_to_removable_storage" />
+
+        <!-- JW: added backup type switch -->
+        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
+            android:defaultValue="false"
+            android:key="pref_backup_zipfile"
+            android:title="@string/preferences_chats__chat_backups_zipfile"
+            android:summary="@string/preferences_chats__backup_chats_to_encrypted_zipfile" />
+
+    </PreferenceCategory>
+
+    <!-- JW: added option to disable view once messages -->
+    <PreferenceCategory android:layout="@layout/preference_divider"/>
+
+    <PreferenceCategory android:key="backup_category" android:title="@string/preferences_chats__view_once_messages">
+        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
+            android:defaultValue="false"
+            android:key="pref_keep_view_once_messages"
+            android:title="@string/preferences_chats__chat_keep_view_once_messages"
+            android:summary="@string/preferences_chats__keep_view_once_messages_summary" />
     </PreferenceCategory>
 
 </PreferenceScreen>
