Added encrypted and plaintext backup / restore. Re-added import SMS database. Removed apk expire. Added the choice between passphrase protection and the Android screenlock. Added more conversation colors and themes. Added a choice for the backup location. Added an option to treat view-once media as normal media. Added an option to disable PIN reminders.

--- a/app/src/main/res/xml/preferences_app_protection.xml
+++ b/app/src/main/res/xml/preferences_app_protection.xml
@@ -3,6 +3,13 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory android:title="@string/preferences_app_protection__app_access">
 
+        <!-- JW: added option to use the passphrase -->
+        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
+            android:key="pref_signal_protection_method"
+            android:defaultValue="false"
+            android:title="@string/preferences_app_protection__method_passphrase"
+            android:summary="@string/preferences_app_protection__method_passphrase_summary"/>
+
         <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
                 android:key="pref_android_screen_lock"
                 android:defaultValue="false"
@@ -116,6 +123,13 @@
             android:key="pref_kbs_change"
             android:title="@string/preferences_app_protection__pin"
             android:summary="@string/preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs" />
+
+        <!-- JW: added option to disable reminders -->
+        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
+            android:key="pref_signal_disable_pinv2_reminders"
+            android:defaultValue="false"
+            android:title="@string/preferences_app_protection__disable_pinv2_reminders"
+            android:summary="@string/preferences_app_protection__disable_pinv2_reminders_summary"/>
     </PreferenceCategory>
 
 </PreferenceScreen>
