--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
   <string-array name="language_entries">
 <!-- zz --><item>@string/preferences__default</item>
@@ -143,14 +143,22 @@
       <item>vi</item>
   </string-array>
 
-  <string-array name="pref_theme_entries" tools:ignore="InconsistentArrays">
+  <!-- JW: added themes -->
+    <string-array name="pref_theme_entries">
       <item>@string/preferences__light_theme</item>
       <item>@string/preferences__dark_theme</item>
+      <item>@string/preferences__oled_theme</item>
+      <item>@string/preferences__green_theme</item>
+      <item>@string/preferences__blue_theme</item>
   </string-array>
 
-  <string-array name="pref_theme_values" translatable="false" tools:ignore="InconsistentArrays">
+  <!-- JW: added themes -->
+  <string-array name="pref_theme_values" translatable="false">
       <item>light</item>
       <item>dark</item>
+      <item>oled</item>
+      <item>green</item>
+      <item>blue</item>
   </string-array>
 
   <string-array name="pref_led_color_entries">
