--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -22,7 +22,6 @@
 <!-- es --><item>Español</item>
 <!-- eo --><item>Esperanto</item>
 <!-- eu --><item>Euskara</item>
-<!-- tl --><item>Filipino</item>
 <!-- fr --><item>Français</item>
 <!-- ga --><item>Gaeilge</item>
 <!-- gl --><item>Galego</item>
@@ -55,7 +54,6 @@
 <!-- pt --><item>Português</item>
 <!-- pt_BR --><item>Português do Brasil</item>
 <!-- pa --><item>Punjabi ਪੰਜਾਬੀ / پنجابی</item>
-<!-- pa_PK --><item>Punjabi (Pakistan) ਪੰਜਾਬ (ਪਾਕਿਸਤਾਨ) / پنجابی</item>
 <!-- qu_EC --><item>Quechua</item>
 <!-- ro --><item>Română</item>
 <!-- ru --><item>Russian Pусский</item>
@@ -95,7 +93,6 @@
       <item>es</item>
       <item>eo</item>
       <item>eu</item>
-      <item>tl</item>
       <item>fr</item>
       <item>ga</item>
       <item>gl</item>
@@ -128,7 +125,6 @@
       <item>pt</item>
       <item>pt_BR</item>
       <item>pa</item>
-      <item>pa_PK</item>
       <item>qu_EC</item>
       <item>ro</item>
       <item>ru</item>
@@ -147,14 +143,22 @@
       <item>vi</item>
   </string-array>
 
+  <!-- JW: added themes -->
   <string-array name="pref_theme_entries" tools:ignore="InconsistentArrays">
       <item>@string/preferences__light_theme</item>
       <item>@string/preferences__dark_theme</item>
+      <item>@string/preferences__oled_theme</item>
+      <item>@string/preferences__green_theme</item>
+      <item>@string/preferences__blue_theme</item>
   </string-array>
 
+  <!-- JW: added themes -->
   <string-array name="pref_theme_values" translatable="false" tools:ignore="InconsistentArrays">
       <item>light</item>
       <item>dark</item>
+      <item>oled</item>
+      <item>green</item>
+      <item>blue</item>
   </string-array>
 
   <string-array name="pref_led_color_entries">
