--- a/app/src/main/res/values-nl/strings1.xml
+++ b/app/src/main/res/values-nl/strings1.xml
@@ -23,6 +23,8 @@
   <!--backup zipfile or not-->
   <string name="preferences_chats__chat_backups_zipfile">Versleutelde backups in zipfile opslaan</string>
   <string name="preferences_chats__backup_chats_to_encrypted_zipfile">De zipfile wordt versleuteld met hetzelfde password als de reguliere backup, of geen indien geen regulierebackup geconfigureerd</string>
+  <string name="preferences_chats__chat_backups_zipfile_plain">Onversleutelde backups in zipfile opslaan</string>
+  <string name="preferences_chats__backup_chats_to_encrypted_zipfile_plain">De zipfile wordt versleuteld met hetzelfde password als de reguliere backup, of geen indien geen regulierebackup geconfigureerd</string>
   <!--ImportFragment-->
   <string name="ImportFragment_restore_encrypted_backup">Versleutelde backup herstellen?</string>
   <string name="ImportFragment_restoring_an_encrypted_backup_will_completely_replace_your_existing_keys">
