--- a/app/src/main/res/values/strings1.xml
+++ b/app/src/main/res/values/strings1.xml
@@ -23,6 +23,8 @@
   <!--backup zipfile or not-->
   <string name="preferences_chats__chat_backups_zipfile">Store encrypted backups in zipfile</string>
   <string name="preferences_chats__backup_chats_to_encrypted_zipfile">The zipfile will be encrypted with the same password as the regular backups, or no password if regular backup is not set</string>
+  <string name="preferences_chats__chat_backups_zipfile_plain">Store plaintext backups in zipfile</string>
+  <string name="preferences_chats__backup_chats_to_encrypted_zipfile_plain">The zipfile will be encrypted with the same password as the regular backups, or no password if regular backup is not set</string>
   <!-- ImportExportActivity -->
   <string name="ImportExportActivity_import">Import</string>
   <string name="ImportExportActivity_export">Export</string>
