--- a/app/src/main/res/xml/preferences_advanced.xml
+++ b/app/src/main/res/xml/preferences_advanced.xml
@@ -10,6 +10,12 @@
         android:title="@string/preferences__signal_messages_and_calls"
         android:summary="@string/preferences__free_private_messages_and_calls"/>
 
+    <!-- JW: added -->
+    <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
+        android:defaultValue="false"
+        android:key="pref_toggle_fcm"
+        android:title="@string/preferences_advanced__push_notifications_fcm"/>
+
     <Preference
         android:key="pref_advanced_pin_settings"
         android:title="@string/preferences__advanced_pin_settings" />
