Basic standalone import application

--- a/app/src/main/res/layout/activity_standalone_importer.xml
+++ b/app/src/main/res/layout/activity_standalone_importer.xml
@@ -29,7 +29,6 @@
             android:background="?android:attr/listDivider" />
 
         <TextView
-            android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/status"
@@ -78,7 +77,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/filFoundLabel"
+                android:id="@+id/dbFoundLabel"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
@@ -91,37 +90,36 @@
             android:layout_height="1dp"
             android:background="?android:attr/listDivider" />
 
-        <LinearLayout
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/merge_backups"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <CheckBox
+            android:id="@+id/merge_backup_checkbox"
+            android:text="@string/merge_with_existing_signal_backup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp" />
+
+        <TextView
+            android:id="@+id/backupInfoLabel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:weightSum="3"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:layout_gravity="center"
-                android:text="@string/merge_with_existing_signal_backup"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/selectBackupButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:text="@string/select_backup_file" />
-        </LinearLayout>
-
+            android:text="@string/no_signal_backup_found"
+            android:visibility="gone"
+            android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
+            android:id="@+id/passphraseEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
+            android:visibility="gone"
             android:text="@string/signal_backup_password_30_digits" />
 
         <View
@@ -129,6 +127,13 @@
             android:layout_marginVertical="20dp"
             android:layout_height="1dp"
             android:background="?android:attr/listDivider" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/import_whatsapp_options"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -141,6 +146,7 @@
                 android:text="@string/import_fragment__import_whatsapp_import_media"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:checked="true"
                 android:layout_margin="10dp" />
 
             <CheckBox
@@ -148,6 +154,7 @@
                 android:text="@string/import_fragment__import_whatsapp_import_groups"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:checked="false"
                 android:layout_margin="10dp" />
 
             <CheckBox
@@ -155,6 +162,7 @@
                 android:text="@string/import_fragment__import_whatsapp_avoid_duplicates"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:checked="true"
                 android:layout_margin="10dp" />
         </LinearLayout>
 
