--- a/app/src/main/res/values/strings1.xml
+++ b/app/src/main/res/values/strings1.xml
@@ -119,17 +119,25 @@
   <!-- WhatsApp Importer Activity -->
   <string name="whatsapp_to_signal_importer">WhatsApp to Signal Importer</string>
   <string name="status">Status</string>
+  <string name="merge_backups">Merge with existing Backup</string>
+  <string name="import_whatsapp_options">Options</string>
   <string name="permissions">Permissions:</string>
   <string name="not_granted">Not Granted</string>
+  <string name="granted">Granted</string>
   <string name="grant">Grant</string>
   <string name="database_file">Database file:</string>
   <string name="msgstore_db_not_found_please_put_in_the_root_directory_of_the_internal_phone_storage_not_on_the_sd_card">msgstore.db not found. Please put in the root directory of the internal phone storage (not on the SD card).</string>
-  <string name="merge_with_existing_signal_backup">Merge with existing Signal Backup</string>
+  <string name="msgstore_db_found">msgstore.db found!</string>
+  <string name="merge_with_existing_signal_backup">Merge with existing Signal Backup.</string>
+  <string name="signal_backup_found">Signal backup found: </string>
+  <string name="no_signal_backup_found">No Signal backup found! Please export a full Signal backup first.</string>
   <string name="select_backup_file">Select Backup File</string>
   <string name="import_whatsapp_messages">Import WhatsApp Messages</string>
-  <string name="signal_backup_password_30_digits">Signal Backup Password (30 digits)</string>
+  <string name="signal_backup_password_30_digits">Backup Passphrase (30 digits)</string>
   <string name="grat_storage_manager_permission">Grant Permission</string>
   <string name="please_grant_storage_manager_permission">Please grant this app the permission to manage all storage. Otherwise it can not open the backup files.</string>
   <string name="ImportFragment_ok">Ok</string>
+  <string name="WhatsApp_exporting">Exporting backup</string>
+  <string name="WhatsApp_exporting_backup_elipse">Exporting new backup...</string>
 
 </resources>
