Deactivated standalone client for the moment because Recipient.self can not be imported from backup.

--- a/app/src/main/res/layout/activity_standalone_importer.xml
+++ b/app/src/main/res/layout/activity_standalone_importer.xml
@@ -121,6 +121,14 @@
             android:inputType="textPersonName"
             android:hint="@string/signal_backup_password_30_digits" />
 
+        <EditText
+            android:id="@+id/phoneNumberEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="phone"
+            android:hint="@string/import_whatsapp_phone_number" />
+
         <Button
             android:id="@+id/selectFolderButton"
             android:layout_width="match_parent"
