--- a/app/src/main/res/values/strings1.xml
+++ b/app/src/main/res/values/strings1.xml
@@ -137,11 +137,14 @@
   <string name="import_whatsapp_messages">Import WhatsApp Messages</string>
   <string name="import_whatsapp_select_backup_folder">Select Backup Folder</string>
   <string name="signal_backup_password_30_digits">Backup Passphrase (30 digits)</string>
+  <string name="import_whatsapp_phone_number">Your phone number (incl. country code) +XXYYYYYYYY</string>
   <string name="grat_storage_manager_permission">Grant Permission</string>
   <string name="please_grant_storage_manager_permission">Please grant this app the permission to manage all storage. Otherwise it can not open the backup files.</string>
   <string name="ImportFragment_ok">Ok</string>
   <string name="WhatsApp_exporting">Exporting backup</string>
   <string name="WhatsApp_exporting_backup_elipse">Exporting new backup...</string>
   <string name="WhatsApp_import_x_days">Only import the last X days</string>
+  <string name="WhatsApp_phone_number_error">Incorrect phone number! Enter your phone number incl. country code in the format +XXXXXXXXX</string>
+  <string name="WhatsApp_success">The WhatsApp messages have been imported and a new backup has been created. You can import this new backup in your Signal app.</string>
 
 </resources>
